<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <!-- For Student -->
    <group
        android:id="@+id/basic_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/student_account_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/account"/>

        <item
            android:id="@+id/student_modules"
            android:icon="@drawable/ic__book"
            android:title="@string/student_modules" />

    </group>
    <group>
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logout"/>
    </group>
</menu>